@@ -26,6 +26,7 @@ dnl SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 AC_INIT([rle], [0.0.1], [leif.walsh@gmail.com], [rle], [http://github.com/adlaiff6/rle])
 AC_PREREQ([2.59])
 AM_INIT_AUTOMAKE([1.10])
+AM_SILENT_RULES([yes])
 AC_CONFIG_HEADERS([config.h rleconfig.h])
 AC_PROG_CC
 AM_PROG_CC_C_O
