@@ -1,5 +1,10 @@
 2012-09-11  Leif Walsh  <leif.walsh@gmail.com>
 
+	* Makefile.am: set library visibility, make libtool build real
+	binaries for tests
+
+	* configure.ac: make build system silent
+
 	* tests/simple.c (main): update old test to use unit test
 	framework
 
